--- a/loffiboly.html
+++ b/loffiboly.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="V2.js"></script>
+    <script src="v2.js"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
     <link rel="stylesheet" href="style.css" />
     <script src="particles.min.js"></script>
